--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 -->
 <html>
     <head>
-        <meta charset="utf-8" />
+        <!--this doesn't solve the problem, comment is left here as a reminder... <meta charset="utf-8" />-->
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
