--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" /> <!--original:, target-densitydpi=device-dpi-->
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+        <!--this doesn't solve the problem, comment is left here as a reminder... <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-theme.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
