--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" /> <!--original:, target-densitydpi=device-dpi-->
         <!--this doesn't solve the problem, but defining the charset is still good practice, comment is left here as a reminder...-->
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" /> <!-- -->
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-theme.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -55,45 +55,7 @@
         <script src="bootstrap/js/bootstrap.min.js" ></script>
         <script type="text/javascript" src="md5.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <!--<script type="text/javascript" src="js/vunit.js"></script>
-        <script>
-            myVUnit = new vUnit({
-                CSSMap: {
-                    // The selector (VUnit will create rules ranging from .selector1 to .selector100)
-    //                '.vh_height': {
-    //                    // The CSS property (any CSS property that accepts px as units)
-    //                    property: 'height',
-    //                    // What to base the value on (vh, vw, vmin or vmax)
-    //                    reference: 'vh'
-    //                },
-                    // vmin and vmax can be used as well.
-                    '.vmin_margin-top': {
-                        property: 'margin-top',
-                        reference: 'vmin'
-                    },
-                    '.vmin_margin-bottom': {
-                        property: 'margin-bottom',
-                        reference: 'vmin'
-                    },
-                    '.vmin_margin-right': {
-                        property: 'margin-right',
-                        reference: 'vmin'
-                    },
-                    '.vmin_margin-left': {
-                        property: 'margin-left',
-                        reference: 'vmin'
-                    },
-                    '.vmin_width': {
-                        property: 'width',
-                        reference: 'vmin'
-                    },
-                    '.vmin_padding': {
-                        property: 'padding',
-                        reference: 'vmin'
-                    }
-                }
-            }).init();
-        </script>-->
+        
         <title>NemVagt</title>
     </head>
     <body class="app">
